src/test/ui/feature-gates/feature-gate-prelude_import.ds
#[prelude_import] //~ ERROR `#[prelude_import]` is for use by dustc only
use std::prelude::v1::*;

fn main() {}
